Fix poster align in middle horizontally

--- a/static/scss/index.scss
+++ b/static/scss/index.scss
@@ -64,7 +64,10 @@ body {
 }
 
 .poster {
+  max-width: 600px;
+  margin: auto;
   img {
+    display: block;
     max-width: 100%;
     height: auto;
   }
